@@ -742,9 +742,6 @@ padthv1_jack_application::padthv1_jack_application ( int& argc, char **argv )
 	}
 
 	if (m_bGui) {
-	#if defined(Q_OS_LINUX) && !defined(CONFIG_WAYLAND)
-		::setenv("QT_QPA_PLATFORM", "xcb", 0);
-	#endif
 	#if QT_VERSION >= QT_VERSION_CHECK(5, 6, 0)
 	#if QT_VERSION <  QT_VERSION_CHECK(6, 0, 0)
 		QApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
