@@ -4,6 +4,11 @@ padthv1 - An old-school additive polyphonic synthesizer
 ChangeLog
 
 
+GIT HEAD
+
+- Get rid of CONFIG_WAYLAND build config option.
+
+
 1.3.2  2025-05-20  A Mid-Spring'25 Release.
 
 - Stepping up next development cycle (Qt >= 6.9)
